src/interpreter/snapshots/rlox__interpreter__tests__interpreter@if__else.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/if/else.lox
---
good
good
block
