src/interpreter/snapshots/rlox__interpreter__tests__interpreter@if__if.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/if/if.lox
---
good
block
true
