src/interpreter/snapshots/rlox__interpreter__tests__interpreter@if__truth.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/if/truth.lox
---
false
nil
true
0
empty
